[tool.poetry]
name = "aiomisc-entrypoint"
version = "1.0.1"
description = ""
homepage = "https://github.com/anysoft-kz/aiomisc-entrypoint"
repository = "https://github.com/anysoft-kz/aiomisc-entrypoint"
authors = ["Vladislav Vorobyov <vladislav.vorobyov@gmail.com>"]
readme = "README.md"
packages = [{include = "aiomisc_entrypoint", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
aiomisc = "^16.2.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
